# customer_churn_prediction

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml  train.yml
artifacts/: best_params.json  calibration.json  category_summary.json  customer_stats.json  distribution_shift.json  eval_metrics.json  feature_cols.json  feature_importance.json  guardrails.json  roc_curve.json  xgb_churn_model.pkl
dashboard/: app.py
memory/: README.md  architecture.md  commands.md  conventions.md  evaluation.md  ml_pipeline.md
predictions/: churn_predictions.csv
src/: __init__.py  config.py
src/baseline/: __init__.py  rule_based.py
src/data_generation/: generate_customers.py  generate_orders.py  generate_products.py  main.py
src/evaluation/: calibration.py  distribution_shift.py  guardrails.py  metrics.py
src/feature_engineering/: customer_attributes.py  pipeline.py  rfm.py  time_features.py  trend_features.py
src/models/: train.py  tune.py
src/prediction/: __init__.py  batch_predict.py
src/preprocessing/: clean.py
src/utils/: io.py  logger.py
tests/: test_baseline.py  test_data_generation.py  test_features.py  test_guardrails.py  test_target.py
