[project]
name = "customer-churn-prediction"
version = "0.1.0"
description = "Production-ready customer churn probability forecasting system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "plotly>=5.18",
    "dash>=2.14",
    "gunicorn>=21.2",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "bandit[toml]>=1.7",
    "radon>=6.0",
    "pip-audit>=2.6",
    "pre-commit>=3.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# E501 – line length handled by formatter
# N803/N806 – X_train / X_test are standard ML naming conventions
ignore = ["E501", "N803", "N806"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "N802"]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
